# paper_generator

./: .env  README.md  pyproject.toml  requirements.txt  setup.sh
src/paper_generator/: __init__.py  main.py
